--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <h1 style="text-align:center; color: blue;">Ashleigh Tesla</h1>
-    <h1 style="text-align: center; color:white;"><b>Calculator</b></h1>
+    <h1 style="text-align:center; color: blue;">Tanaka Tesla</h1>
+    <h1 style="text-align: center; color:white;"><b>Family Calculator</b></h1>
     <div class="contain">
         <div class="calculator-grid">
             <div class="output">
