--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="scripts/calculator.js" defer></script>
 </head>
+<style>
+    body {
+        background-image: url("images/family.JPG");
+        background-color: #cccccc;
+        background-position: center center;
+        background-repeat: repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
 
 <body>
     <div class="father">
         <div class="child">
-            <h1 style="text-align:center; color: blue;">Tanaka Tesla</h1>
-            <h1 style="text-align: center; color:white;"><b>Family Calculator</b></h1>
+            <h1 style="text-align:center; color: aqua;">Tanaka Tesla</h1>
+            <h1 style="text-align: center; color:aquamarine;"><b>Family Calculator</b></h1>
             <div class="calculator-grid">
                 <div class="output">
                     <div data-previous-operand class="previous-operand"></div>
