updated my family calculator

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <style>
     body {
-        background-image: url("images/family.JPG");
-        background-color: #cccccc;
+        background: linear-gradient(to right, #00AAFF, #00FF6C);
+        background-color: radial-gradient(red, yellow, green);
+        background-image: url('https://source.unsplash.com/random/calculus'), url("images/family.JPG");
         background-position: center center;
         background-repeat: repeat;
         background-attachment: fixed;
@@ -24,8 +25,8 @@
 <body>
     <div class="father">
         <div class="child">
-            <h1 style="text-align:center; color: aqua;">Tanaka Tesla</h1>
-            <h1 style="text-align: center; color:aquamarine;"><b>Family Calculator</b></h1>
+            <h1 style="text-align:center; color: navy;">Tanaka Tesla</h1>
+            <h1 style="text-align: center; color:indigo;"><b>Family Calculator</b></h1>
             <div class="calculator-grid">
                 <div class="output">
                     <div data-previous-operand class="previous-operand"></div>
